--- a/src/ProfileCard/ProfileCard.module.css
+++ b/src/ProfileCard/ProfileCard.module.css
@@ -1,4 +1,4 @@
-.profile-card {
+.profileCard {
     background: #fff;
     
     display: flex;
@@ -36,7 +36,7 @@
     object-fit: cover;
 }
   
-.profile-picture {
+.profilePicture {
     position: absolute;
     top: 45px;
     
@@ -52,14 +52,14 @@
     background: #fff;
 }
   
-.profile-picture img {
+.profilePicture img {
     width: 100%;
     height: 100%;
     
     object-fit: cover
 }
   
-.text-info {
+.textInfo {
     flex: 1;
     
     display: flex;
@@ -81,10 +81,12 @@
     font-size: 12px;
 }
   
-.connect-button {
-    background: var(--purple);
-    color: #fff;
+.connectButton {
+    background: transparent;
+    color: var(--purple);
     
+    box-sizing: border-box; 
+    border: var(--thin-border) var(--purple);
     border-radius: var(--radius);
     
     box-shadow: var(--shadow);
@@ -98,6 +100,10 @@
     transition: all 0.3s;
 }
   
-.connect-button:hover {
-    background: var(--hover-purple);
+.connectButton:hover {
+    transform: translateY(-2px);
+}
+
+.connectButton:active {
+    transform: translateY(-1px);
 }
