--- a/src/ProfileCard/ProfileCard.module.css
+++ b/src/ProfileCard/ProfileCard.module.css
@@ -13,29 +13,31 @@
     height: 275px;
 }
   
-.background {
+.clickableContainer {
     flex: 1;
-    
+
     display: flex;
     flex-direction: column;
-    justify-content: start;
+    justify-content: space-between;
     align-items: center;
-    
-    width: 100%;
-    height: 100%;
-    
+
     position: relative;
 }
-  
-.background img {
+
+.background {
+    height: 100px;
     width: 100%;
-    height: 80%;
-      
-    border-radius: var(--radius);
-    
-    object-fit: cover;
 }
-  
+
+.background img {
+    width: inherit;
+    height: inherit;
+
+    object-fit: cover;
+
+    border-radius: var(--radius);
+}
+
 .profilePicture {
     position: absolute;
     top: 45px;
@@ -56,21 +58,20 @@
     width: 100%;
     height: 100%;
     
-    object-fit: cover
+    object-fit: cover;
+
+    border-radius: var(--radius);
 }
-  
-.textInfo {
-    flex: 1;
-    
+
+.text {
+    height: 75px;
+
     display: flex;
     flex-direction: column;
-    justify-content: space-between;
+    justify-items: center;
     align-items: center;
-    gap: var(--layout-spacing);
-    
-    padding: var(--padding);
-    
-    overflow: hidden; 
+
+    padding: 0 var(--padding);
 }
   
 .intro {
@@ -79,6 +80,16 @@
     text-overflow: ellipsis;
     
     font-size: 12px;
+}
+
+.buttonContainer {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+
+    height: 40px;
+
+    margin: var(--padding);
 }
   
 .connectButton {
@@ -93,7 +104,7 @@
     
     padding: calc(var(--padding) / 2);
       
-    min-width: 150px;
+    width: 150px;
       
     font-weight: bold;
     
