--- a/src/index.css
+++ b/src/index.css
@@ -33,11 +33,15 @@ button {
     cursor: pointer;
 }
   
-p, h3, h2 {
+p, h1, h2, h3, h4 {
     margin: 0;
     padding: 0;
 
     line-height: normal;
+}
+
+div {
+    box-sizing: border-box;
 }
 
 a:link {
