--- a/src/Pages/ProfilePage/ProfilePage.module.css
+++ b/src/Pages/ProfilePage/ProfilePage.module.css
@@ -7,8 +7,8 @@
     flex-direction: column;
     justify-content: center;
     align-items: center;
-    gap: 50px;
-
+    gap: 40px;
+    
     border-radius: var(--radius);
 
     box-shadow: var(--shadow);
@@ -57,7 +57,7 @@
     object-fit: cover;
 }
 
-.profileInfoContainer {
+.userInfo {
     flex: 1;
 
     width: 100%;
@@ -67,6 +67,8 @@
     justify-content: center;
     align-items: center;
     gap: var(--padding);
+
+    padding: var(--padding) 45px;
 }
 
 .basicInfo {
@@ -77,15 +79,9 @@
     align-items: center;
     gap: calc(4 * var(--padding));
 
-    padding: 0 45px;
-
     text-align: center;
 }
 
-p {
-    font-size: 16px;
-}
-
-h4 {
+h3 {
     font-size: 20px;
 }
