--- a/src/Components/ProfileCard/ProfileCard.module.css
+++ b/src/Components/ProfileCard/ProfileCard.module.css
@@ -16,6 +16,8 @@
 .clickableContainer {
     flex: 1;
 
+    width: 100%;
+
     display: flex;
     flex-direction: column;
     justify-content: space-between;
@@ -30,8 +32,8 @@
 }
 
 .background img {
-    width: inherit;
     height: inherit;
+    width: inherit;
 
     object-fit: cover;
 
@@ -83,41 +85,4 @@
     text-overflow: ellipsis;
 
     font-size: 12px;
-}
-
-.buttonContainer {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-
-    height: 40px;
-
-    margin: var(--padding);
-}
-  
-.connectButton {
-    background: transparent;
-    color: var(--purple);
-    
-    box-sizing: border-box; 
-    border: var(--thin-border) var(--purple);
-    border-radius: var(--radius);
-    
-    box-shadow: var(--shadow);
-    
-    padding: calc(var(--padding) / 2);
-      
-    width: 150px;
-      
-    font-weight: bold;
-    
-    transition: all 0.3s;
-}
-  
-.connectButton:hover {
-    transform: translateY(-2px);
-}
-
-.connectButton:active {
-    transform: translateY(-1px);
 }
