Added button to detailed profile view to copy user's email

--- a/src/Components/DetailedProfile/DetailedProfile.module.css
+++ b/src/Components/DetailedProfile/DetailedProfile.module.css
@@ -82,6 +82,15 @@
     text-align: center;
 }
 
+.buttonContainer {
+    width: 100%;
+    
+    display: flex;
+    justify-content: start;
+    align-items: center;
+    gap: var(--padding);
+}
+
 h3 {
     font-size: 20px;
 }
