--- a/src/Pages/ProfilePage/ProfilePage.module.css
+++ b/src/Pages/ProfilePage/ProfilePage.module.css
@@ -1,3 +1,7 @@
+h3 {
+    font-size: 20px;
+}
+
 .profile {
     position: relative;
 
@@ -91,6 +95,34 @@
     gap: var(--padding);
 }
 
-h3 {
-    font-size: 20px;
+.infoContainer {
+    background: #fff;
+
+    width: 100%;
+
+    padding: var(--padding);
+
+    border-radius: var(--radius);
+
+    box-shadow: var(--shadow);
+}
+
+.dateJoined {
+    width: 100%;
+
+    color: var(--dark-grey);
+
+    display: flex;
+    justify-content: end;
+    align-items: center;
+
+    text-align: end;
+}
+
+.dateJoined h3 {
+    font-size: 16px;
+}
+
+.dateJoined p {
+    font-size: 12px;
 }
