--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,14 @@
+.modalOverlay {
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    z-index: 50;
+    
+    background: rgba(0, 0, 0, 0.6);
+}
+
 .content {
     display: flex;
     justify-content: center;
