--- a/src/Components/EditProfileModal/EditProfileModal.module.css
+++ b/src/Components/EditProfileModal/EditProfileModal.module.css
@@ -6,7 +6,7 @@ dialog:focus {
     outline: none;
 }
 
-.userModal {
+.modal {
     position: fixed;
     top: 50%;
     left: 50%;
@@ -21,45 +21,42 @@ dialog:focus {
 
     width: 400px;
     max-width: 100%;
-    height: 300px;
+    height: 600px;
     max-height: 100%;
     
     margin: 0;
     padding: 0;
 }
 
-.closeButton {
-    position: absolute;
-    top: 8px;
-    right: 8px;
-    
-    background: var(--yellow);
-    border: none;
-}
-
-.userModalTitle {
+.modalTitle {
     padding: var(--padding);
 
     border-bottom: 1px solid;
 }
 
-.userModalContent {
-    width: 100%;
-
-    overflow: auto;
+.formField {
+    display: flex;
+    flex-direction: column;
 }
 
-.userModalContent h3 {
+form {
     padding: var(--padding);
 
-    font-weight: normal;
+    display: flex;
+    flex-direction: column;
+    gap: var(--padding);
 }
 
-.userModalContent ul {
-    margin: 0;
-    padding-right: var(--padding);
+label {
+    font-weight: bold;
 }
 
-.userModalContent ul > li {
-    margin-bottom: calc(1/2 * var(--padding));
+input {
+    padding: var(--padding);
+
+    border-radius: var(--radius);
+}
+
+footer {
+    background: var(--light-grey);
 }
