--- a/src/index.css
+++ b/src/index.css
@@ -5,6 +5,8 @@
 
   background-color: #E5E5E5;
 
+  min-width: 100vh;
+
   font-synthesis: none;
   text-rendering: optimizeLegibility;
   -webkit-font-smoothing: antialiased;
@@ -33,6 +35,7 @@
 
 body {
     margin: 0;
+    min-width: 100vh;
 }
   
 button {
